<resources>
    <string name="app_name">UnipiSmartAlert</string>
    <string name="google_maps_api_key">AIzaSyCFtyEn_oo-WjBvTftLCSKnEenY4zFtaak</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="history">History</string>
    <string name="minimum_password">Password must be 6–12 characters long!</string>
    <string name="correct_email">Enter a valid email…</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_reenter_password">Re-enter password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you your password reset instructions.</string>
    <string name="email_id">Email</string>
    <string name="btn_manage_account">Manage Account</string>
    <string name="btn_abort">Abort</string>
    <string name="btn_sos">SOS</string>
    <string name="acceleration_textView">Acceleration</string>
    <string name="rounded_acceleration" />
    <string name="light_textView" />
    <string name="light_textView_sign">Light</string>
    <string name="accel_not_supported">Accelerometer not supported</string>
    <string name="light_not_supported">Light sensor not supported</string>
    <string name="abort_activity_info">Please Enter again your email and password</string>
    <string name="btn_credentials">Confirm</string>
    <string name="speed_textView_sign">Speed</string>
    <string name="current_speed">%1$d km/h</string>
    <string name="contacts">Contacts</string>
    <string name="title_location_permission">GPS permission needed!</string>
    <string name="text_location_permission">This app needs permission to use your GPS in order to calculate speed. Please allow!</string>
    <string name="title_sms_permission">SMS permission needed!</string>
    <string name="text_sms_permission">This app needs your permission to be able to send an sms to your added contacts in case you are in danger. Please allow!</string>
    <string name="ok">ALLOW</string>
    <string name="cancel">DENY</string>
    <string name="denied_permission">Permission denied</string>
    <string name="add_contacts">Please enter up to three contacts</string>
    <string name="first_contact">Add first contact number</string>
    <string name="first_contact_added">First Contact added</string>
    <string name="second_contact">Add second contact number</string>
    <string name="second_contact_added">Second contact added</string>
    <string name="third_contact">Add third contact number</string>
    <string name="third_contact_added">Third contact added</string>
    <string name="correct_phoneNumber">Invalid phone number</string>
    <string name="add_contacts_btn">ADD</string>
    <string name="delete_contacts_btn">DELETE</string>
    <string name="empty_textView" />
    <string name="gps_disabled">GPS is disabled please turn it on!</string>
    <string name="gps_textView">GPS is disabled!</string>
    <string name="added_contact">Added contact: %1$s</string>
    <string name="title_activity_maps">Map</string>

</resources>