<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mppl16032.georgepyliaros.unipismartalert.AccountActivity.ContactsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/add_contacts"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstContact_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/first_contact"
            android:inputType="phone" />

        <TextView
            android:id="@+id/firstContact_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_textView"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/add_contacts_btn1"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_contacts_btn"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/delete_contacts_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_contacts_btn"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


        <EditText
            android:id="@+id/secondContact_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/second_contact"
            android:inputType="phone" />

        <TextView
            android:id="@+id/secondContact_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_textView"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/add_contacts_btn2"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_contacts_btn"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/delete_contacts_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_contacts_btn"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


        <EditText
            android:id="@+id/thirdContact_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/third_contact"
            android:inputType="phone" />

        <TextView
            android:id="@+id/thirdContact_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_textView"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/add_contacts_btn3"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_contacts_btn"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/delete_contacts_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_contacts_btn"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_back3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="#000000" />

    </LinearLayout>

</ScrollView>
